# Memora

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  start-memora.ps1
backend/: __init__.py  interfaces.py  models.py
backend/api/: README.md  __init__.py  app.py  schemas.py  security.py  service.py
backend/database/: README.md  __init__.py  sqlite_store.py  timestamp_backfill.py
backend/ingestion/: README.md  __init__.py  bulk_import.py  chatgpt_export.py  (+4 more)
docs/: PRODUCT.md  SETUP.md  architecture.md  demo-script.md  demo-video-script.md  final-security-audit.md  fresh-start-checklist.md  judge-quickstart.md  security-architecture.md  security-audit.md  security-regression-report.md  submission-description.md  technical-overview.md  threat-model.md
extension/: manifest.json  package-lock.json  package.json  popup.css  popup.html  tsconfig.json
memora_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: drone_detection.json  event_planning.json  sourdough.json  travel_planning.json  university_coursework.json
scripts/: __init__.py  backfill_memory_timestamps.py  calibrate_relevance.py  demo_rag.py  evaluate_reranking.py  evaluate_retrieval.py  import_chatgpt_export.py  test_start_memora_launcher.ps1
tests/: test_api.py  test_chatgpt_import.py  test_embedding_providers.py  test_import_chatgpt_export_cli.py  test_interfaces.py  test_memory_facts.py  test_memory_threads.py  test_models.py  test_pdf_documents.py  test_relevance.py  test_reranker.py  test_synthesis.py  test_timestamp_backfill.py  test_vertical_slice.py
(+51 files in other folders)
