[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memora-backend"
version = "0.1.0"
description = "Personalized memory and retrieval layer for AI chat applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "openai>=1.0.0,<3",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.30,<1",
]

[tool.setuptools.packages.find]
include = ["backend*"]
